// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routes > model > getModel > audit > expected call 1`] = `"vespillo"`;

exports[`routes > model > getModel > audit > expected call 2`] = `
{
  "example": "test",
}
`;

exports[`routes > model > getModel > latest > 200 > ok 1`] = `
{
  "modelCard": {
    "example": "test",
  },
}
`;

exports[`routes > model > getModel > version > 200 > ok 1`] = `
{
  "modelCard": {
    "_id": "test",
  },
}
`;
